kubernetes/apps/network/envoy-gateway/config/internal.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: home-gw01.int.kreigan.com
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: homeks-gw01.int.kreigan.com
      lbipam.cilium.io/ips: 10.1.21.50
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: minecraft
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: All
